--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "url": "https://github.com/thelinmichael/spotify-web-api-node.git"
   },
   "dependencies": {
-    "superagent": "^2.0.0"
+    "superagent": "^2.0.0",
+    "superagent-proxy": "~1.0.2"
   },
   "config": {
     "blanket": {
